force-app/main/default/objects/PGi_Company__c/PGi_Company__c.object-meta.xml
<CustomObject>
    <label>PGi Company</label>
    <nameField>
        <label>PGi Company ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PGi Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>