force-app/main/default/objects/PGi_Company__c/fields/AcctOwnersManager__c.field-meta.xml
<CustomField>
    <fullName>AcctOwnersManager__c</fullName>
    <formula>RelatedAccount__r.Supervisor__c</formula>
    <label>Acct Owner&#39;s Manager</label>
    <type>Text</type>
</CustomField>