force-app/main/default/objects/PGi_Company__c/fields/AcctOwnersRVP__c.field-meta.xml
<CustomField>
    <fullName>AcctOwnersRVP__c</fullName>
    <formula>RelatedAccount__r.Owner.RVP__r.FirstName + &#39; &#39; +  RelatedAccount__r.Owner.RVP__r.LastName</formula>
    <label>Acct Owner&#39;s RVP</label>
    <type>Text</type>
</CustomField>