force-app/main/default/objects/PGi_Company__c/fields/AcctOwnersSVP__c.field-meta.xml
<CustomField>
    <fullName>AcctOwnersSVP__c</fullName>
    <formula>RelatedAccount__r.Owner.SVP__r.FirstName +  &#39; &#39; +  RelatedAccount__r.Owner.SVP__r.LastName</formula>
    <label>Acct Owner&#39;s SVP</label>
    <type>Text</type>
</CustomField>