force-app/main/default/objects/PGi_Company__c/fields/Active_Clients__c.field-meta.xml
<CustomField>
    <fullName>Active_Clients__c</fullName>
    <label>Active Clients</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>