force-app/main/default/objects/PGi_Company__c/fields/As_of_Month__c.field-meta.xml
<CustomField>
    <fullName>As_of_Month__c</fullName>
    <description>This is the month of the revenue data.</description>
    <label>As of Month</label>
    <length>25</length>
    <type>Text</type>
</CustomField>