force-app/main/default/objects/PGi_Company__c/fields/Average_Age_of_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Average_Age_of_Open_Cases__c</fullName>
    <label>Average Age of Open Cases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>