force-app/main/default/objects/PGi_Company__c/fields/Cancellation_of_Services_Received__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_of_Services_Received__c</fullName>
    <label>Cancellation of Services Received</label>
    <type>Date</type>
</CustomField>