force-app/main/default/objects/PGi_Company__c/fields/Cancellation_Service_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Service_Plan_Type__c</fullName>
    <label>Cancellation Service Plan Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>