force-app/main/default/objects/PGi_Company__c/fields/CorpCustSFAccountID__c.field-meta.xml
<CustomField>
    <fullName>CorpCustSFAccountID__c</fullName>
    <label>CorpCust SF Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>