force-app/main/default/objects/PGi_Company__c/fields/Default_Bill_To_Intl_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Bill_To_Intl_Client_ID__c</fullName>
    <label>Default Bill To Intl Client ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>