force-app/main/default/objects/PGi_Company__c/fields/DirectSFOpptyID__c.field-meta.xml
<CustomField>
    <fullName>DirectSFOpptyID__c</fullName>
    <label>CorpCust SF Oppty ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>