force-app/main/default/objects/PGi_Company__c/fields/Enterprise_Name__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Name__c</fullName>
    <label>Enterprise Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>