force-app/main/default/objects/PGi_Company__c/fields/EntityName__c.field-meta.xml
<CustomField>
    <fullName>EntityName__c</fullName>
    <formula>PGi_Entity__r.Corpentname__c</formula>
    <label>Entity Name</label>
    <type>Text</type>
</CustomField>