force-app/main/default/objects/PGi_Company__c/fields/Intl_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Intl_Company_ID__c</fullName>
    <label>Intl Company ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>