force-app/main/default/objects/PGi_Company__c/fields/IsHighRisk__c.field-meta.xml
<CustomField>
    <fullName>IsHighRisk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on the Red Flag Date being populated</description>
    <label>Is High Risk</label>
    <type>Checkbox</type>
</CustomField>