force-app/main/default/objects/PGi_Company__c/fields/Last13MonthsOpAssistBilledRevenue__c.field-meta.xml
<CustomField>
    <fullName>Last13MonthsOpAssistBilledRevenue__c</fullName>
    <label>Last 13 Month&#39;s OpAssist Billed Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>