force-app/main/default/objects/PGi_Company__c/fields/Last_13_Months_Billed_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_13_Months_Billed_Revenue__c</fullName>
    <label>Last 13 Month&apos;s Billed Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>