force-app/main/default/objects/PGi_Company__c/fields/No_Blast_Email__c.field-meta.xml
<CustomField>
    <fullName>No_Blast_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Blast Email</label>
    <type>Checkbox</type>
</CustomField>