force-app/main/default/objects/PGi_Company__c/fields/NZL__c.field-meta.xml
<CustomField>
    <fullName>NZL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NZL</label>
    <type>Checkbox</type>
</CustomField>