force-app/main/default/objects/PGi_Company__c/fields/Open_Opportunities_ACV__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunities_ACV__c</fullName>
    <label>Open Opportunities ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>