force-app/main/default/objects/PGi_Company__c/fields/Orange_Portal__c.field-meta.xml
<CustomField>
    <fullName>Orange_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, cases tied to this company will appear in the Orange Portal for external users</inlineHelpText>
    <label>Orange Portal</label>
    <type>Checkbox</type>
</CustomField>