force-app/main/default/objects/PGi_Company__c/fields/PGi_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>PGi_Entity_ID__c</fullName>
    <externalId>true</externalId>
    <label>PGi Entity ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>