force-app/main/default/objects/PGi_Company__c/fields/PrimarySalesRep__c.field-meta.xml
<CustomField>
    <fullName>PrimarySalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PGi_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>