force-app/main/default/objects/PGi_Company__c/fields/Related_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Name__c</fullName>
    <formula>RelatedAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account Name</label>
    <type>Text</type>
</CustomField>