force-app/main/default/objects/PGi_Company__c/fields/Related_Ultimate_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Ultimate_Parent_Account__c</fullName>
    <formula>RelatedAccount__r.Ultimate_Parent_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Ultimate Parent Account</label>
    <type>Text</type>
</CustomField>