force-app/main/default/objects/PGi_Company__c/fields/RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PGi Companies</relationshipLabel>
    <relationshipName>PGi_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>