force-app/main/default/objects/PGi_Company__c/fields/Sales_Rep_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_s_Email__c</fullName>
    <label>Sales Rep&apos;s Email</label>
    <type>Email</type>
</CustomField>