force-app/main/default/objects/PGi_Company__c/fields/SF_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Account_ID__c</fullName>
    <label>SF Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>