force-app/main/default/objects/PGi_Company__c/fields/Status_Level__c.field-meta.xml
<CustomField>
    <fullName>Status_Level__c</fullName>
    <label>Status Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>