force-app/main/default/objects/PGi_Company__c/fields/TCV_of_all_Closed_Won_Deals__c.field-meta.xml
<CustomField>
    <fullName>TCV_of_all_Closed_Won_Deals__c</fullName>
    <label>TCV of all Closed Won Deals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>