force-app/main/default/objects/PGi_Company__c/fields/Total_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Case_Count__c</fullName>
    <label>Total Case Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>