force-app/main/default/objects/PGi_Company__c/fields/Total_Cases_Open_in_Past_90_Days_from_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases_Open_in_Past_90_Days_from_c__c</fullName>
    <label>Total Cases Open in Past 90 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>