force-app/main/default/objects/PGi_Company__c/fields/Totango3rdParty__c.field-meta.xml
<CustomField>
    <fullName>Totango3rdParty__c</fullName>
    <formula>Name + &quot;__Web: Third Party&quot;</formula>
    <label>Totango: 3rd Party</label>
    <type>Text</type>
</CustomField>