force-app/main/default/objects/PGi_Company__c/fields/TotangoAA__c.field-meta.xml
<CustomField>
    <fullName>TotangoAA__c</fullName>
    <formula>Name + &quot;__Automated Audio&quot;</formula>
    <label>Totango: AA</label>
    <type>Text</type>
</CustomField>