force-app/main/default/objects/PGi_Company__c/fields/TotangoCompanyID__c.field-meta.xml
<CustomField>
    <fullName>TotangoCompanyID__c</fullName>
    <formula>Name + &quot;__cid&quot;</formula>
    <label>Totango Company ID</label>
    <type>Text</type>
</CustomField>