force-app/main/default/objects/PGi_Company__c/fields/TotangoEntityID__c.field-meta.xml
<CustomField>
    <fullName>TotangoEntityID__c</fullName>
    <formula>IF(NOT(ISBLANK( PGi_Entity__c)),
PGi_Entity__r.TotangoEntityID__c,
NULL)</formula>
    <label>Totango Entity ID</label>
    <type>Text</type>
</CustomField>