force-app/main/default/objects/PGi_Company__c/fields/TotangoGM__c.field-meta.xml
<CustomField>
    <fullName>TotangoGM__c</fullName>
    <formula>Name + &quot;__Web: GlobalMeet&quot;</formula>
    <label>Totango: GM</label>
    <type>Text</type>
</CustomField>