force-app/main/default/objects/PGi_Company__c/fields/TotangoTypeOA__c.field-meta.xml
<CustomField>
    <fullName>TotangoTypeOA__c</fullName>
    <formula>&quot;Operator Assisted&quot;</formula>
    <label>Totango Type: OA</label>
    <type>Text</type>
</CustomField>