force-app/main/default/objects/PGi_Company__c/fields/Ultimate_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PGi Companies (Ultimate Parent Account)</relationshipLabel>
    <relationshipName>PGi_Companies1</relationshipName>
    <type>Lookup</type>
</CustomField>