force-app/main/default/objects/PGi_Company__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Company_Name__c</columns>
    <columns>NAME</columns>
    <columns>Last_13_Months_Billed_Revenue__c</columns>
    <columns>Last_Invoiced_Month__c</columns>
    <columns>Last_Months_Billed_Revenue__c</columns>
    <columns>As_of_Month__c</columns>
    <columns>Status_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>