force-app/main/default/objects/PGi_Company__c/listViews/Companies_with_Ultimate_Parent_Account.listView-meta.xml
<ListView>
    <fullName>Companies_with_Ultimate_Parent_Account</fullName>
    <columns>Company_Name__c</columns>
    <columns>NAME</columns>
    <columns>Last_13_Months_Billed_Revenue__c</columns>
    <columns>Last_Invoiced_Month__c</columns>
    <columns>Last_Months_Billed_Revenue__c</columns>
    <columns>As_of_Month__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ultimate_Parent_Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Companies with Ultimate Parent Account</label>
    <language>en_US</language>
</ListView>