force-app/main/default/objects/PGi_Company__c/listViews/Inactive_to_Delete.listView-meta.xml
<ListView>
    <fullName>Inactive_to_Delete</fullName>
    <columns>Company_Name__c</columns>
    <columns>NAME</columns>
    <columns>Last_13_Months_Billed_Revenue__c</columns>
    <columns>Last_Invoiced_Month__c</columns>
    <columns>Last_Months_Billed_Revenue__c</columns>
    <columns>As_of_Month__c</columns>
    <columns>Status_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inactive_Date__c</field>
        <operation>lessThan</operation>
        <value>LAST_N_YEARS:2</value>
    </filters>
    <label>Inactive to Delete</label>
    <language>en_US</language>
</ListView>