force-app/main/default/objects/PGi_Company__c/listViews/Odds.listView-meta.xml
<ListView>
    <fullName>Odds</fullName>
    <columns>Company_Name__c</columns>
    <columns>NAME</columns>
    <columns>Last_13_Months_Billed_Revenue__c</columns>
    <columns>Last_Invoiced_Month__c</columns>
    <columns>Last_Months_Billed_Revenue__c</columns>
    <columns>As_of_Month__c</columns>
    <columns>Status_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>BI Datawarehouse Integration</value>
    </filters>
    <filters>
        <field>Placeholder__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Odds</label>
    <language>en_US</language>
</ListView>