force-app/main/default/objects/PGi_Company__c/listViews/Placeholders.listView-meta.xml
<ListView>
    <fullName>Placeholders</fullName>
    <columns>Company_Name__c</columns>
    <columns>NAME</columns>
    <columns>Last_13_Months_Billed_Revenue__c</columns>
    <columns>Last_Invoiced_Month__c</columns>
    <columns>Last_Months_Billed_Revenue__c</columns>
    <columns>As_of_Month__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Placeholder__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Placeholders</label>
    <language>en_US</language>
</ListView>